# cleant

./: .env.example  .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bigfiles.rs  cleaner.rs  devjunk.rs  dupes.rs  leftovers.rs  lib.rs  main.rs  scanner.rs  startup.rs  uninstaller.rs  updater.rs
src/components/: AppDetailDrawer.tsx  BlobArt.tsx  Button.tsx  CategoryRow.tsx  CleanupCelebration.tsx  ConfirmCleanModal.tsx  DolphinLoader.tsx  HealthGauge.tsx  Logo.tsx  OceanLoader.tsx  Onboarding.tsx  ReminderBanner.tsx  ScanRing.tsx  Segmented.tsx  SelectionBar.tsx  Sidebar.tsx  SidebarArt.tsx  SmartScanLoader.tsx  SpeedTestCard.tsx  Titlebar.tsx  UninstallModal.tsx  Watermark.tsx
src/data/: categories.ts
src/lib/: api.ts  cn.ts  exclusions.ts  format.ts  health.ts  history.ts  reminders.ts  speedtest.ts  types.ts  useCountUp.ts  useTheme.ts
src/styles/: index.css
src/views/: AppsView.tsx  CleanView.tsx  DeveloperView.tsx  DuplicatesView.tsx  LargeFilesView.tsx  LeftoversView.tsx  OverviewView.tsx  PerformanceView.tsx  SettingsView.tsx  StorageView.tsx
