[package]
name = "tclean"
version = "0.1.0"
description = "A calm, lightweight macOS disk cleaner"
authors = ["Tunix Studio"]
edition = "2021"

# The Tauri lib is shared by the desktop binary (and any future mobile target).
[lib]
name = "tclean_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
dirs = "6"
trash = "5"
plist = "1"
icns = "0.4"
base64 = "0.22"
sysinfo = { version = "0.39", default-features = false, features = ["disk"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
